docs/apache-airflow-providers-atlassian-jira/1.1.0/_sources/_api/airflow/providers/atlassian/jira/hooks/jira/index.rst.txt
:py:mod:`airflow.providers.atlassian.jira.hooks.jira`
=====================================================

.. py:module:: airflow.providers.atlassian.jira.hooks.jira

.. autoapi-nested-parse::

   Hook for JIRA



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.atlassian.jira.hooks.jira.JiraHook




.. py:class:: JiraHook(jira_conn_id = default_conn_name, proxies = None)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Jira interaction hook, a Wrapper around JIRA Python SDK.

   :param jira_conn_id: reference to a pre-defined Jira Connection

   .. py:attribute:: default_conn_name
      :annotation: = jira_default

      

   .. py:attribute:: conn_type
      :annotation: = jira

      

   .. py:attribute:: conn_name_attr
      :annotation: = jira_conn_id

      

   .. py:attribute:: hook_name
      :annotation: = JIRA

      

   .. py:method:: get_conn()

      Returns connection for the hook.



